--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-   <fragment
-       android:id="@+id/choose_area_fragment"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:name="lover.zoe.com.weatherdemo.fragment.ChooiceAreaFragment"/>
+    <fragment
+        android:id="@+id/choose_area_fragment"
+        android:name="lover.zoe.com.weatherdemo.fragment.ChooiceAreaFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 </FrameLayout>
