添加BtterKnife后无法实现点击事件问题

--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -22,12 +22,19 @@
         android:textColor="#fff"
         android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/nav_button"
+    <LinearLayout
+        android:id="@+id/nav_layout"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/ic_home" />
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/nav_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingLeft="10dp"
+            android:background="@drawable/ic_home" />
+    </LinearLayout>
+
 </RelativeLayout>
