--- a/app/src/main/res/layout/fragment_chooice_area.xml
+++ b/app/src/main/res/layout/fragment_chooice_area.xml
@@ -16,6 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_marginTop="10dp"
             android:textColor="#fff"
             android:textSize="20sp" />
 
@@ -26,7 +27,8 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/ic_back"/>
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_back" />
 
     </RelativeLayout>
 
